--- a/SparkNotebooks/UpToDate/Jenks Natural Breaks C4E.snb.ipynb
+++ b/SparkNotebooks/UpToDate/Jenks Natural Breaks C4E.snb.ipynb
@@ -12,9 +12,11 @@
     "trusted" : true,
     "sparkNotebook" : null,
     "customLocalRepo" : null,
-    "customRepos" : null,
+    "customRepos" : [
+      "clustering4ever % default % http://dl.bintray.com/clustering4ever/C4E % maven"
+    ],
     "customDeps" : [
-      "org.clustering4ever %% clustering4ever % 0.7.0"
+      "org.clustering4ever %% clustering4ever % 0.7.2"
     ],
     "customImports" : null,
     "customArgs" : null,
@@ -45,14 +47,14 @@
       },
       "cell_type" : "code",
       "source" : [
-        "import clustering4ever.scala.clustering.JenksNaturalBreaks\n",
+        "import org.clustering4ever.scala.clustering.JenksNaturalBreaks\n",
         "import scala.collection.mutable"
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "import clustering4ever.scala.clustering.JenksNaturalBreaks\nimport scala.collection.mutable\n"
+          "text" : "import org.clustering4ever.scala.clustering.JenksNaturalBreaks\nimport scala.collection.mutable\n"
         },
         {
           "metadata" : { },
@@ -61,7 +63,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 1,
-          "time" : "Took: 2.729s, at 2018-10-27 20:25"
+          "time" : "Took: 0.962s, at 2018-11-15 21:31"
         }
       ]
     },
@@ -69,7 +71,7 @@
       "metadata" : {
         "trusted" : true,
         "input_collapsed" : false,
-        "collapsed" : false,
+        "collapsed" : true,
         "id" : "D4419D13D8884D118B394790BFF2325F"
       },
       "cell_type" : "code",
@@ -82,7 +84,7 @@
       "metadata" : {
         "trusted" : true,
         "input_collapsed" : false,
-        "collapsed" : false,
+        "collapsed" : true,
         "presentation" : {
           "tabs_state" : "{\n  \"tab_id\": \"#tab1961620904-0\"\n}",
           "pivot_chart_state" : "{\n  \"hiddenAttributes\": [],\n  \"menuLimit\": 200,\n  \"cols\": [],\n  \"rows\": [],\n  \"vals\": [],\n  \"exclusions\": {},\n  \"inclusions\": {},\n  \"unusedAttrsVertical\": 85,\n  \"autoSortUnusedAttrs\": false,\n  \"inclusionsInfo\": {},\n  \"aggregatorName\": \"Count\",\n  \"rendererName\": \"Table\"\n}"
