--- a/SparkNotebooks/UpToDate/Spark K-Means C4E.snb.ipynb
+++ b/SparkNotebooks/UpToDate/Spark K-Means C4E.snb.ipynb
@@ -13,12 +13,12 @@
     "sparkNotebook" : null,
     "customLocalRepo" : "${HOME}/.ivy2",
     "customRepos" : [
-      "clustering4ever % default % http://dl.bintray.com/clustering4ever/Clustering4Ever % maven"
+      "clustering4ever % default % http://dl.bintray.com/clustering4ever/C4E % maven"
     ],
     "customDeps" : [
       "com.github.haifengl:smile-scala_2.11:1.5.0",
       "org.apache.sanselan % sanselan % 0.97-incubator",
-      "clustering4ever % clustering4ever_2.11 % 0.6.9-SNAPSHOT"
+      "org.clustering4ever % clustering4ever_2.11 % 0.7.2"
     ],
     "customImports" : null,
     "customArgs" : null,
@@ -56,19 +56,19 @@
         "import smile.plot._\n",
         "import scala.io.Source\n",
         "import scala.collection.{mutable, immutable}\n",
-        "import clustering4ever.spark.clustering.kmeans.KMeans\n",
-        "import clustering4ever.math.distances.scalar.{Euclidean, Cosine, Minkowski}\n",
-        "import clustering4ever.spark.indexes.ExternalIndexes\n",
-        "import clustering4ever.scala.indexes.NmiNormalizationNature._\n",
-        "import clustering4ever.util.SparkImplicits._\n",
-        "import clustering4ever.scala.clusterizables.RealClusterizable\n",
-        "import clustering4ever.scala.vectorizables.RealVector"
+        "import org.clustering4ever.spark.clustering.kcenters.KMeans\n",
+        "import org.clustering4ever.math.distances.scalar.Euclidean\n",
+        "import org.clustering4ever.spark.indexes.ExternalIndexes\n",
+        "import org.clustering4ever.scala.indexes.NmiNormalizationNature._\n",
+        "import org.clustering4ever.util.SparkImplicits._\n",
+        "import org.clustering4ever.scala.clusterizables.EasyClusterizable\n",
+        "import org.clustering4ever.scala.vectorizables.RealVector"
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "import smile.plot._\nimport scala.io.Source\nimport scala.collection.{mutable, immutable}\nimport clustering4ever.spark.clustering.kmeans.KMeans\nimport clustering4ever.math.distances.scalar.{Euclidean, Cosine, Minkowski}\nimport clustering4ever.spark.indexes.ExternalIndexes\nimport clustering4ever.scala.indexes.NmiNormalizationNature._\nimport clustering4ever.util.SparkImplicits._\nimport clustering4ever.scala.clusterizables.RealClusterizable\nimport clustering4ever.scala.vectorizables.RealVector\n"
+          "text" : "import smile.plot._\nimport scala.io.Source\nimport scala.collection.{mutable, immutable}\nimport org.clustering4ever.spark.clustering.kcenters.KMeans\nimport org.clustering4ever.math.distances.scalar.Euclidean\nimport org.clustering4ever.spark.indexes.ExternalIndexes\nimport org.clustering4ever.scala.indexes.NmiNormalizationNature._\nimport org.clustering4ever.util.SparkImplicits._\nimport org.clustering4ever.scala.clusterizables.EasyClusterizable\nimport org.clustering4ever.scala.vectorizables.RealVector\n"
         },
         {
           "metadata" : { },
@@ -76,8 +76,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 1,
-          "time" : "Took: 0.826s, at 2018-09-19 14:31"
+          "execution_count" : 5,
+          "time" : "Took: 0.803s, at 2018-11-15 22:09"
         }
       ]
     },
@@ -104,7 +104,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "--2018-09-19 14:31:42--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.2’\n\n     0K .......                                               100% 38.1K=0.2s\n\n2018-09-19 14:31:43 (38.1 KB/s) - ‘/tmp/aggregation.csv.2’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-19 14:31:43--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-19 14:31:43--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.11’\n\n     0K .                                                     100%  177M=0s\n\n2018-09-19 14:31:43 (177 MB/s) - ‘/tmp/labels.11’ saved [1576/1576]\n\nFINISHED --2018-09-19 14:31:43--\nTotal wall clock time: 0.5s\nDownloaded: 2 files, 9.4K in 0.2s (45.6 KB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
+          "text" : "--2018-11-15 22:09:27--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.6’\n\n     0K .......                                               100% 99.8M=0s\n\n2018-11-15 22:09:27 (99.8 MB/s) - ‘/tmp/aggregation.csv.6’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-11-15 22:09:27--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-11-15 22:09:27--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.7’\n\n     0K .                                                     100%  223M=0s\n\n2018-11-15 22:09:27 (223 MB/s) - ‘/tmp/labels.7’ saved [1576/1576]\n\nFINISHED --2018-11-15 22:09:27--\nTotal wall clock time: 0.05s\nDownloaded: 2 files, 9.4K in 0s (110 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 63 elided\n"
         }
       ]
     },
@@ -131,16 +131,14 @@
         "\n",
         "val path = \"/tmp/aggregation.csv\"\n",
         "val rawRdd = if( useAggregationDS ) sc.textFile(path, dp).map( x => mutable.ArrayBuffer(x.split(\",\").map(_.toDouble):_*)) else sc.parallelize(List.fill(datasetSize)(mutable.ArrayBuffer.fill(dim)(scala.util.Random.nextDouble)), dp)\n",
-        "val rdd = rawRdd.zipWithIndex.map{ case (v, id) => new RealClusterizable(id, new RealVector(v)) }.cache\n",
-        "val labelsPath = \"/tmp/labels\"\n",
-        "\n",
-        "rdd.count"
+        "val rdd = rawRdd.zipWithIndex.map{ case (v, id) => new EasyClusterizable(id, new RealVector(v)) }.cache\n",
+        "val labelsPath = \"/tmp/labels\"\n"
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "datasetSize: Int = 500000\ndim: Int = 4\nuseAggregationDS: Boolean = true\ndp: Int = 16\npath: String = /tmp/aggregation.csv\nrawRdd: org.apache.spark.rdd.RDD[scala.collection.mutable.ArrayBuffer[Double]] = MapPartitionsRDD[2] at map at <console>:89\nrdd: org.apache.spark.rdd.RDD[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = MapPartitionsRDD[4] at map at <console>:90\nlabelsPath: String = /tmp/labels\nres4: Long = 788\n"
+          "text" : "datasetSize: Int = 500000\ndim: Int = 4\nuseAggregationDS: Boolean = true\ndp: Int = 16\npath: String = /tmp/aggregation.csv\nrawRdd: org.apache.spark.rdd.RDD[scala.collection.mutable.ArrayBuffer[Double]] = MapPartitionsRDD[2] at map at <console>:89\nrdd: org.apache.spark.rdd.RDD[org.clustering4ever.scala.clusterizables.EasyClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = MapPartitionsRDD[4] at map at <console>:90\nlabelsPath: String = /tmp/labels\nres8: Long = 788\n"
         },
         {
           "metadata" : { },
@@ -148,8 +146,8 @@
             "text/html" : "788"
           },
           "output_type" : "execute_result",
-          "execution_count" : 3,
-          "time" : "Took: 2.574s, at 2018-09-19 14:31"
+          "execution_count" : 6,
+          "time" : "Took: 3.315s, at 2018-11-15 22:09"
         }
       ]
     },
@@ -171,13 +169,14 @@
       "source" : [
         "val k = 7\n",
         "val iterMax = 40\n",
-        "val epsilon = 0.5"
+        "val epsilon = 0.5\n",
+        "val metric = new Euclidean[mutable.ArrayBuffer[Double]](false)"
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "k: Int = 7\niterMax: Int = 40\nepsilon: Double = 0.5\n"
+          "text" : "k: Int = 7\niterMax: Int = 40\nepsilon: Double = 0.5\nmetric: org.clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]] = Euclidean distance without root applied\n"
         },
         {
           "metadata" : { },
@@ -185,8 +184,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 4,
-          "time" : "Took: 0.786s, at 2018-09-19 14:31"
+          "execution_count" : 9,
+          "time" : "Took: 0.683s, at 2018-11-15 22:10"
         }
       ]
     },
@@ -207,13 +206,7 @@
       "cell_type" : "code",
       "source" : [
         "val t1 = System.currentTimeMillis\n",
-        "val model = KMeans.run(\n",
-        "  sc,\n",
-        "  rdd,\n",
-        "  k,\n",
-        "  epsilon,\n",
-        "  iterMax\n",
-        ")\n",
+        "val model = KMeans.run(rdd, k, epsilon, iterMax, metric)\n",
         "val t2 = System.currentTimeMillis\n",
         "(t2 - t1) / 1000D"
       ],
@@ -221,16 +214,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "t1: Long = 1537360307921\nmodel: clustering4ever.spark.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.spark.clustering.kmeans.KMeansModel@76383067\nt2: Long = 1537360309053\nres7: Double = 1.132\n"
+          "text" : "t1: Long = 1542316217366\nmodel: org.clustering4ever.spark.clustering.kcenters.KCentersModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],org.clustering4ever.scala.clusterizables.EasyClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],org.clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = org.clustering4ever.spark.clustering.kcenters.KCentersModel@72ab5867\nt2: Long = 1542316218528\nres15: Double = 1.162\n"
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "1.132"
+            "text/html" : "1.162"
           },
           "output_type" : "execute_result",
-          "execution_count" : 5,
-          "time" : "Took: 2.267s, at 2018-09-19 14:31"
+          "execution_count" : 11,
+          "time" : "Took: 2.107s, at 2018-11-15 22:10"
         }
       ]
     },
@@ -250,7 +243,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "clusterized: org.apache.spark.rdd.RDD[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = MapPartitionsRDD[34] at map at K-CommonsSpark.scala:154\nlclusterized: Array[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = Array(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@76c9fb00,None,Some(3)), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@63b7052d,None,Some(0)), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@35926016,None,Some(0)), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@2a51cbe4,None,Some(0)), RealC..."
+          "text" : "clusterized: org.apache.spark.rdd.RDD[org.clustering4ever.scala.clusterizables.EasyClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = MapPartitionsRDD[36] at map at K-Centers-Model.scala:38\nlclusterized: Array[org.clustering4ever.scala.clusterizables.EasyClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = Array(EasyClusterizable(0,RealVector(ArrayBuffer(15.55, 28.65)),Some(0)), EasyClusterizable(1,RealVector(ArrayBuffer(14.9, 27.55)),Some(3)), EasyClusterizable(2,RealVector(ArrayBuffer(14.45, 28.35)),Some(3)), EasyClusterizable(3,RealVector(ArrayBuffer(14.15, 28.8)),Some(3)), EasyClusterizable(4,RealVector(ArrayBuffer(13.75, 28.05)),Some(3)), EasyClusterizable(5,Rea..."
         },
         {
           "metadata" : { },
@@ -258,8 +251,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 6,
-          "time" : "Took: 0.721s, at 2018-09-19 14:31"
+          "execution_count" : 12,
+          "time" : "Took: 0.782s, at 2018-11-15 22:10"
         }
       ]
     },
@@ -288,7 +281,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "java.awt.HeadlessException\n  at java.awt.GraphicsEnvironment.checkHeadless(GraphicsEnvironment.java:204)\n  at java.awt.Window.<init>(Window.java:536)\n  at java.awt.Frame.<init>(Frame.java:420)\n  at javax.swing.JFrame.<init>(JFrame.java:233)\n  at smile.plot.Window$.frame(Window.scala:49)\n  at smile.plot.Window$.apply(Window.scala:33)\n  at smile.plot.Operators$class.plot(Operators.scala:86)\n  at smile.plot.package$.plot(package.scala:23)\n  ... 69 elided\n"
+          "text" : "rawData: Array[Array[Double]] = Array(Array(15.55, 28.65), Array(14.9, 27.55), Array(14.45, 28.35), Array(14.15, 28.8), Array(13.75, 28.05), Array(13.35, 28.45), Array(13.0, 29.15), Array(13.45, 27.5), Array(13.6, 26.5), Array(12.8, 27.35), Array(12.4, 27.85), Array(12.3, 28.4), Array(12.2, 28.65), Array(13.4, 25.1), Array(12.95, 25.95), Array(12.9, 26.5), Array(11.85, 27.0), Array(11.35, 28.0), Array(11.15, 28.7), Array(11.25, 27.4), Array(10.75, 27.7), Array(10.5, 28.35), Array(9.65, 28.45), Array(10.25, 27.25), Array(10.75, 26.55), Array(11.7, 26.35), Array(11.6, 25.9), Array(11.9, 25.05), Array(12.6, 24.05), Array(11.9, 24.5), Array(11.1, 25.2), Array(10.55, 25.15), Array(10.05, 25.95), Array(9.35, 26.6), Array(9.3, 27.25), Array(9.2, 27.8), Array(7.5, 28.25), Array(8.55, 27.45), Ar..."
+        },
+        {
+          "metadata" : { },
+          "data" : {
+            "text/html" : "Window(javax.swing.JFrame[frame0,460,37,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 1,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,37,1000x963,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777675,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x963,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=11,maximumSize=,minimumSize=,preferredSize=])"
+          },
+          "output_type" : "execute_result",
+          "execution_count" : 13,
+          "time" : "Took: 1.381s, at 2018-11-15 22:10"
         }
       ]
     },
@@ -320,22 +322,7 @@
         "\n",
         "nmi"
       ],
-      "outputs" : [
-        {
-          "name" : "stdout",
-          "output_type" : "stream",
-          "text" : "trueLabels: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[35] at parallelize at <console>:100\ntrueLabelsFrom0: org.apache.spark.rdd.RDD[Long] = MapPartitionsRDD[40] at map at ExternalIndexes.scala:73\npredicts: org.apache.spark.rdd.RDD[Int] = MapPartitionsRDD[41] at map at <console>:104\ntrueAndPredictRDD: org.apache.spark.rdd.RDD[(Int, Int)] = ParallelCollectionRDD[42] at parallelize at <console>:106\nnmi: Double = 0.5988478670110992\nres12: Double = 0.5988478670110992\n"
-        },
-        {
-          "metadata" : { },
-          "data" : {
-            "text/html" : "0.5988478670110992"
-          },
-          "output_type" : "execute_result",
-          "execution_count" : 8,
-          "time" : "Took: 1.464s, at 2018-09-19 14:31"
-        }
-      ]
+      "outputs" : [ ]
     }
   ],
   "nbformat" : 4
